# cot_without_prompting

./: .env.example  .gitignore  README.md  Workbench.ipynb  docker-compose.yml  pyproject.toml
src/: cot_decoding.py  dataset_generation.py  dpo.py  get_total_token.py  mix_datasets.py  model_config.py  print_final_dataset.py  test_cot.py  test_openai_api.py  vllm_model.py  workspace_types.py
